# LLMrv

./: .gitignore  LICENSE  README.md
Temporal Guard/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Temporal Guard/backend/: config.py  main.py
Temporal Guard/backend/engine/: grounding.py  monitor.py  trace.py
Temporal Guard/backend/models/: __init__.py  builtins.py  chat.py  policy.py  session.py  settings.py
Temporal Guard/backend/routers/: chat.py  policies.py  settings.py
Temporal Guard/backend/services/: grounding_client.py  local_llm.py  openrouter.py
Temporal Guard/backend/store/: db.py
Temporal Guard/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.test.json  vite.config.ts
Temporal Guard/frontend/src/: App.tsx  index.css
Temporal Guard/frontend/src/api/: client.test.ts  client.ts
Temporal Guard/frontend/src/components/chat/: ChatView.test.tsx  ChatView.tsx  MessageBubble.test.tsx  MessageBubble.tsx  MessageInput.test.tsx  MessageInput.tsx  MonitorStatus.test.tsx  MonitorStatus.tsx  ViolationAlert.test.tsx  ViolationAlert.tsx
Temporal Guard/frontend/src/components/rules/: FormulaBuilder.test.tsx  FormulaBuilder.tsx  PropositionCard.test.tsx  PropositionCard.tsx  PropositionEditor.test.tsx  PropositionEditor.tsx  RuleCard.test.tsx  RuleCard.tsx  RulesView.test.tsx  RulesView.tsx
Temporal Guard/frontend/src/components/settings/: GroundingConfig.test.tsx  GroundingConfig.tsx  GroundingPromptEditor.test.tsx  (+5 more)
Temporal Guard/frontend/src/hooks/: useChat.test.ts  useChat.ts  usePolicies.test.ts  usePolicies.ts  useSettings.test.ts  useSettings.ts
Temporal Guard/frontend/src/test/: infra.test.ts  mocks.ts  utils.tsx
Temporal Guard/frontend/src/types/: index.ts
Temporal Guard/scripts/: seed_examples.py  test_policy_hacking_new.py  test_policy_shopping.py
Temporal Guard/tests/: conftest.py  test_api.py  test_api_edge_cases.py  test_db.py  test_grounding.py  test_grounding_client.py  test_local_llm.py  test_monitor.py  test_openrouter.py  test_ptltl.py  test_rv_traces.py  test_rv_traces_extended.py  test_trace.py
Temporal Guard/tests/e2e/: conftest.py  test_chat.py  test_integration.py  test_model_selection.py  test_navigation.py  test_rules.py  test_settings.py
temporalguard-sdk/: README.md  pyproject.toml
temporalguard-sdk/docker/: Dockerfile.example  docker-compose.yml
temporalguard-sdk/examples/: basic_usage.py  fastapi_app.py  policies.yaml
temporalguard-sdk/src/temporalguard/: __init__.py  builtins.py  cache.py  guard.py  loader.py  policy.py
temporalguard-sdk/src/temporalguard/engine/: grounding.py  ptltl.py
temporalguard-sdk/src/temporalguard/grounding/: few_shot.py  prompts.py
temporalguard-sdk/src/temporalguard/integrations/: langchain.py
temporalguard-sdk/tests/: test_builtins.py  test_cache.py  test_few_shot.py  test_grounding.py  test_guard.py  test_integration_fastapi.py  test_integration_langchain.py  test_integration_ollama.py  test_integration_openai.py  test_loader.py  test_monitor.py  test_prompts.py  test_rv_traces.py  test_session.py  test_trace.py
(+130 files in other folders)
